Feat: Add the function check existed playerId by principal on all Services